--- a/investor-dashboard.html
+++ b/investor-dashboard.html
@@ -5,24 +5,165 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investor Dashboard - ShootingStars</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class="container py-5">
-        <h1 class="text-center mb-4">Investor Dashboard</h1>
-        <div class="mb-4">
-            <input type="text" class="form-control" placeholder="Search athletes (e.g., Football, 16 years)">
+<body class="bg-light">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">
+                <i class="fas fa-star text-warning me-2"></i>ShootingStars
+            </a>
+            <div class="navbar-nav ms-auto">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="#" class="nav-link">My Investments</a>
+                <a href="#" class="nav-link">Messages</a>
+                <div class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                        <i class="fas fa-user-circle"></i> Profile
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Edit Profile</a></li>
+                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="card col-md-8 mx-auto">
-            <div class="card-body">
-                <h5 class="card-title">John Smith, 16</h5>
-                <p class="card-text"><strong>Sport:</strong> Football</p>
-                <p class="card-text"><strong>Stats:</strong> Top 5% of high school players.</p>
-                <p class="card-text"><strong>Funding:</strong> $50K, 10% revenue share.</p>
-                <button class="btn btn-primary">Contact</button>
+    </nav>
+
+    <div class="container py-5">
+        <!-- Dashboard Header -->
+        <div class="dashboard-header text-center mb-4">
+            <h1 class="display-5 fw-bold">Investor Dashboard</h1>
+            <p class="lead">Discover and invest in the next generation of sports champions</p>
+        </div>
+
+        <!-- Quick Stats -->
+        <div class="row mb-4">
+            <div class="col-lg-3 col-md-6 mb-3">
+                <div class="athlete-profile-card text-center">
+                    <div class="stat-icon mb-3">
+                        <i class="fas fa-users text-primary"></i>
+                    </div>
+                    <h3 class="mb-1">247</h3>
+                    <p class="text-muted">Available Athletes</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-3">
+                <div class="athlete-profile-card text-center">
+                    <div class="stat-icon mb-3">
+                        <i class="fas fa-chart-line text-success"></i>
+                    </div>
+                    <h3 class="mb-1">$2.4M</h3>
+                    <p class="text-muted">Total Invested</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-3">
+                <div class="athlete-profile-card text-center">
+                    <div class="stat-icon mb-3">
+                        <i class="fas fa-trophy text-warning"></i>
+                    </div>
+                    <h3 class="mb-1">95%</h3>
+                    <p class="text-muted">Success Rate</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-3">
+                <div class="athlete-profile-card text-center">
+                    <div class="stat-icon mb-3">
+                        <i class="fas fa-dollar-sign text-info"></i>
+                    </div>
+                    <h3 class="mb-1">$45K</h3>
+                    <p class="text-muted">Avg. Investment</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Search and Filters -->
+        <div class="search-container mb-4">
+            <div class="row">
+                <div class="col-lg-6 mb-3">
+                    <label class="form-label">Search Athletes</label>
+                    <div class="input-group">
+                        <span class="input-group-text"><i class="fas fa-search"></i></span>
+                        <input type="text" class="form-control" placeholder="Search by name, sport, or location..." id="searchInput">
+                    </div>
+                </div>
+                <div class="col-lg-2 mb-3">
+                    <label class="form-label">Sport</label>
+                    <select class="form-select" id="sportFilter">
+                        <option value="">All Sports</option>
+                        <option value="football">Football</option>
+                        <option value="baseball">Baseball</option>
+                        <option value="martial_arts">Martial Arts</option>
+                        <option value="basketball">Basketball</option>
+                    </select>
+                </div>
+                <div class="col-lg-2 mb-3">
+                    <label class="form-label">Age Range</label>
+                    <select class="form-select" id="ageFilter">
+                        <option value="">All Ages</option>
+                        <option value="13-15">13-15 years</option>
+                        <option value="16-18">16-18 years</option>
+                        <option value="19-22">19-22 years</option>
+                    </select>
+                </div>
+                <div class="col-lg-2 mb-3">
+                    <label class="form-label">Funding Goal</label>
+                    <select class="form-select" id="fundingFilter">
+                        <option value="">All Amounts</option>
+                        <option value="0-10000">$0 - $10K</option>
+                        <option value="10000-25000">$10K - $25K</option>
+                        <option value="25000-50000">$25K - $50K</option>
+                        <option value="50000+">$50K+</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
+        <!-- Featured Athletes -->
+        <div class="mb-4">
+            <h3 class="mb-3"><i class="fas fa-star text-warning me-2"></i>Featured Athletes</h3>
+            <div class="row" id="athletesList">
+                <!-- Athletes will be loaded here -->
+            </div>
+        </div>
+
+        <!-- Load More Button -->
+        <div class="text-center">
+            <button class="btn btn-outline-primary btn-lg" id="loadMoreBtn">
+                <i class="fas fa-plus me-2"></i>Load More Athletes
+            </button>
+        </div>
+    </div>
+
+    <!-- Athlete Detail Modal -->
+    <div class="modal fade" id="athleteModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Athlete Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body" id="athleteModalBody">
+                    <!-- Athlete details will be loaded here -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">
+                        <i class="fas fa-envelope me-2"></i>Contact Athlete
+                    </button>
+                    <button type="button" class="btn btn-success">
+                        <i class="fas fa-dollar-sign me-2"></i>Invest Now
+                    </button>
+                </div>
             </div>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
