--- a/athlete-profile.html
+++ b/athlete-profile.html
@@ -5,23 +5,221 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athlete Profile - ShootingStars</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="bg-light">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">
+                <i class="fas fa-star text-warning me-2"></i>ShootingStars
+            </a>
+            <div class="navbar-nav ms-auto">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="#" class="nav-link">Dashboard</a>
+                <a href="#" class="nav-link">Messages</a>
+                <div class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                        <i class="fas fa-user-circle"></i> Profile
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Edit Profile</a></li>
+                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
     <div class="container py-5">
-        <h1 class="text-center mb-4">Athlete Profile</h1>
-        <div class="card col-md-8 mx-auto">
-            <div class="card-body">
-                <h5 class="card-title">John Smith, 16</h5>
-                <p class="card-text"><strong>Sport:</strong> Football</p>
-                <p class="card-text"><strong>Bio:</strong> Started playing football at 10, led team to state finals.</p>
-                <p class="card-text"><strong>Achievements:</strong> 1200 passing yards in 2024 season.</p>
-                <p class="card-text"><strong>Funding:</strong> $50K for training camp.</p>
-                <p class="card-text"><strong>Followers:</strong> 5K on X.</p>
-                <p class="card-text"><strong>Video:</strong> <a href="https://youtube.com" target="_blank">Watch Highlights</a></p>
+        <div class="row">
+            <!-- Profile Card -->
+            <div class="col-lg-4 mb-4">
+                <div class="athlete-profile-card">
+                    <div class="text-center mb-4">
+                        <div class="profile-image mb-3">
+                            <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=150&h=150&fit=crop&crop=face" 
+                                 alt="Athlete Profile" class="rounded-circle" style="width: 150px; height: 150px; object-fit: cover;">
+                        </div>
+                        <h3 class="mb-1" id="athleteName">John Smith</h3>
+                        <p class="text-muted mb-2" id="athleteAge">16 years old</p>
+                        <div class="d-flex justify-content-center mb-3">
+                            <span class="badge bg-primary me-2" id="athleteSport">Football</span>
+                            <span class="badge bg-success">Verified</span>
+                        </div>
+                        <p class="text-muted" id="athleteLocation">Dallas, TX</p>
+                    </div>
+
+                    <div class="profile-stats mb-4">
+                        <div class="row text-center">
+                            <div class="col-4">
+                                <div class="stat-number" id="followers">5.2K</div>
+                                <div class="stat-label">Followers</div>
+                            </div>
+                            <div class="col-4">
+                                <div class="stat-number" id="funding">$25K</div>
+                                <div class="stat-label">Goal</div>
+                            </div>
+                            <div class="col-4">
+                                <div class="stat-number" id="progress">60%</div>
+                                <div class="stat-label">Funded</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="progress mb-4">
+                        <div class="progress-bar" role="progressbar" style="width: 60%"></div>
+                    </div>
+
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-primary">
+                            <i class="fas fa-edit me-2"></i>Edit Profile
+                        </button>
+                        <button class="btn btn-outline-primary">
+                            <i class="fas fa-share me-2"></i>Share Profile
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Main Content -->
+            <div class="col-lg-8">
+                <!-- Bio Section -->
+                <div class="athlete-profile-card mb-4">
+                    <h4 class="mb-3"><i class="fas fa-user me-2"></i>About Me</h4>
+                    <p id="athleteBio">
+                        Started playing football at age 10 and quickly fell in love with the game. 
+                        Led my high school team to the state finals as a quarterback, throwing for over 
+                        3,000 yards and 35 touchdowns in my junior year. I'm dedicated to improving 
+                        my skills and pursuing my dream of playing college football.
+                    </p>
+                </div>
+
+                <!-- Achievements Section -->
+                <div class="athlete-profile-card mb-4">
+                    <h4 class="mb-3"><i class="fas fa-trophy me-2"></i>Achievements & Stats</h4>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul class="list-unstyled">
+                                <li class="mb-2">
+                                    <i class="fas fa-medal text-warning me-2"></i>
+                                    State Championship Finalist 2024
+                                </li>
+                                <li class="mb-2">
+                                    <i class="fas fa-star text-warning me-2"></i>
+                                    Team MVP 2023 & 2024
+                                </li>
+                                <li class="mb-2">
+                                    <i class="fas fa-award text-warning me-2"></i>
+                                    All-State First Team QB
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="list-unstyled">
+                                <li class="mb-2">
+                                    <strong>3,247</strong> Passing yards (2024)
+                                </li>
+                                <li class="mb-2">
+                                    <strong>35</strong> Touchdown passes
+                                </li>
+                                <li class="mb-2">
+                                    <strong>68%</strong> Completion percentage
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Video Highlights -->
+                <div class="athlete-profile-card mb-4">
+                    <h4 class="mb-3"><i class="fas fa-video me-2"></i>Video Highlights</h4>
+                    <div class="video-container">
+                        <div class="video-thumbnail">
+                            <img src="https://images.unsplash.com/photo-1566577739112-5180d4bf9390?w=600&h=300&fit=crop" 
+                                 alt="Video Thumbnail" class="img-fluid">
+                            <div class="play-button">
+                                <i class="fas fa-play"></i>
+                            </div>
+                        </div>
+                        <div class="video-info mt-3">
+                            <h6>Season Highlights 2024</h6>
+                            <p class="text-muted">Watch my best throws and plays from the 2024 season</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Funding Information -->
+                <div class="athlete-profile-card mb-4">
+                    <h4 class="mb-3"><i class="fas fa-dollar-sign me-2"></i>Funding Information</h4>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="funding-item">
+                                <label class="form-label">Funding Goal</label>
+                                <div class="h5 text-primary">$25,000</div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="funding-item">
+                                <label class="form-label">Amount Raised</label>
+                                <div class="h5 text-success">$15,000</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-3">
+                        <label class="form-label">Purpose</label>
+                        <p>Funding will be used for elite quarterback training camp, personal coaching, 
+                           equipment upgrades, and travel expenses for college recruitment visits.</p>
+                    </div>
+                    <div class="mt-3">
+                        <label class="form-label">Return Terms</label>
+                        <p>10% revenue share for 5 years from future professional contracts and endorsements.</p>
+                    </div>
+                </div>
+
+                <!-- Social Media -->
+                <div class="athlete-profile-card mb-4">
+                    <h4 class="mb-3"><i class="fas fa-share-alt me-2"></i>Social Media</h4>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="social-stat">
+                                <i class="fab fa-twitter text-info me-2"></i>
+                                <span class="fw-bold">2.3K followers</span>
+                                <a href="#" class="text-primary ms-2">@johnsmith_qb</a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="social-stat">
+                                <i class="fab fa-instagram text-danger me-2"></i>
+                                <span class="fw-bold">2.9K followers</span>
+                                <a href="#" class="text-primary ms-2">@johnsmith_football</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Contact -->
+                <div class="athlete-profile-card">
+                    <h4 class="mb-3"><i class="fas fa-envelope me-2"></i>Contact Information</h4>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p><strong>Email:</strong> john.smith@email.com</p>
+                            <p><strong>Phone:</strong> (555) 123-4567</p>
+                        </div>
+                        <div class="col-md-6">
+                            <p><strong>Coach:</strong> Mike Johnson</p>
+                            <p><strong>High School:</strong> Dallas High School</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
