--- a/index.html
+++ b/index.html
@@ -3,49 +3,262 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShootingStars - Hayda</title>
+    <title>ShootingStars - Fund the Next Champion</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top glass-nav">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="#"><i class="fas fa-star text-warning me-2"></i>ShootingStars</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#how-it-works">How It Works</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#success-stories">Success Stories</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#trust">Trust & Safety</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Sign In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-primary btn-sm ms-2" href="athlete-signup.html">Join Now</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <!-- Hero Section -->
-    <section class="hero text-center text-white d-flex align-items-center">
-        <div class="container">
-            <h1 class="display-3 fw-bold">Fund the Next Champion. Fuel Your Athletic Journey.</h1>
-            <p class="lead">Hayda connects young football, baseball, and martial arts stars with investors who believe in their potential.</p>
-            <div class="mt-4">
-                <a href="athlete-signup.html" class="btn btn-primary btn-lg me-3">Join as Athlete</a>
-                <a href="investor-signup.html" class="btn btn-outline-light btn-lg">Join as Investor</a>
+    <section class="hero-section position-relative overflow-hidden">
+        <div class="hero-bg"></div>
+        <div class="hero-overlay"></div>
+        <div class="container position-relative">
+            <div class="row align-items-center min-vh-100">
+                <div class="col-lg-6">
+                    <div class="hero-content fade-in-up">
+                        <h1 class="hero-title mb-4">
+                            Fund the Next 
+                            <span class="text-gradient">Champion</span>
+                            <br>Fuel Your Athletic 
+                            <span class="text-gradient">Journey</span>
+                        </h1>
+                        <p class="hero-subtitle mb-4">
+                            ShootingStars empowers young football, baseball, and martial arts stars to connect with investors who believe in their potential.
+                        </p>
+                        <div class="hero-stats mb-5">
+                            <div class="stat-item">
+                                <div class="stat-number">$120M</div>
+                                <div class="stat-label">Invested in youth sports</div>
+                            </div>
+                            <div class="stat-item">
+                                <div class="stat-number">500+</div>
+                                <div class="stat-label">Young athletes funded</div>
+                            </div>
+                            <div class="stat-item">
+                                <div class="stat-number">95%</div>
+                                <div class="stat-label">Success rate</div>
+                            </div>
+                        </div>
+                        <div class="hero-buttons">
+                            <a href="athlete-signup.html" class="btn btn-primary btn-lg me-3 pulse-button">
+                                <i class="fas fa-user-plus me-2"></i>Join as Athlete
+                            </a>
+                            <a href="investor-signup.html" class="btn btn-outline-light btn-lg glass-button">
+                                <i class="fas fa-dollar-sign me-2"></i>Join as Investor
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <a href="login.html" class="text-white text-decoration-none">
+                                <small>Already have an account? <u>Sign In</u></small>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="hero-image fade-in-right">
+                        <div class="floating-card">
+                            <div class="athlete-card">
+                                <div class="athlete-image">
+                                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=300&h=300&fit=crop&crop=face" alt="Young Athlete">
+                                </div>
+                                <div class="athlete-info">
+                                    <h6>Jake Martinez, 17</h6>
+                                    <p class="mb-1">⚾ Baseball</p>
+                                    <p class="mb-0">Raised $25K for training</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="scroll-indicator">
+            <div class="scroll-arrow bounce">
+                <i class="fas fa-chevron-down"></i>
             </div>
         </div>
     </section>
 
-    <!-- Video Section -->
-    <section class="py-5">
-        <div class="container text-center">
-            <h2 class="mb-4">Success Story</h2>
-            <div class="ratio ratio-16x9" style="max-width: 600px; margin: 0 auto;">
-                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Success Story" allowfullscreen></iframe>
+    <!-- How It Works Section -->
+    <section id="how-it-works" class="py-5 bg-light">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="section-title">How It Works</h2>
+                <p class="section-subtitle">Three simple steps to get started</p>
             </div>
-            <p class="mt-3">Jake, 17, raised $25K for baseball training!</p>
+            <div class="row">
+                <div class="col-lg-4 mb-4">
+                    <div class="step-card text-center">
+                        <div class="step-icon">
+                            <i class="fas fa-user-plus"></i>
+                        </div>
+                        <h4>1. Sign Up</h4>
+                        <p>Create your profile as an athlete or investor with our simple verification process.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="step-card text-center">
+                        <div class="step-icon">
+                            <i class="fas fa-search"></i>
+                        </div>
+                        <h4>2. Connect</h4>
+                        <p>Browse profiles, review stats, and connect with the right opportunities.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="step-card text-center">
+                        <div class="step-icon">
+                            <i class="fas fa-handshake"></i>
+                        </div>
+                        <h4>3. Invest</h4>
+                        <p>Secure funding with transparent terms and track performance together.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-    <!-- Trust Signals -->
-    <section class="py-5 bg-light text-center">
+    <!-- Success Stories Section -->
+    <section id="success-stories" class="py-5">
         <div class="container">
-            <h2 class="mb-4">Trusted by Many</h2>
-            <p class="lead">$120M invested in youth sports in 2024 (Business Insider, 2025)</p>
-            <div class="row mt-4">
-                <div class="col-md-3"><img src="assets/placeholder-logo1.png" alt="Academy 1" class="img-fluid" style="max-height: 50px;"></div>
-                <div class="col-md-3"><img src="assets/placeholder-logo2.png" alt="Academy 2" class="img-fluid" style="max-height: 50px;"></div>
-                <div class="col-md-3"><img src="assets/placeholder-logo3.png" alt="Academy 3" class="img-fluid" style="max-height: 50px;"></div>
-                <div class="col-md-3"><img src="assets/placeholder-logo4.png" alt="Academy 4" class="img-fluid" style="max-height: 50px;"></div>
+            <div class="text-center mb-5">
+                <h2 class="section-title">Success Stories</h2>
+                <p class="section-subtitle">Real athletes, real results</p>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <div class="video-container">
+                        <div class="video-thumbnail">
+                            <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=800&h=450&fit=crop" alt="Success Story">
+                            <div class="play-button">
+                                <i class="fas fa-play"></i>
+                            </div>
+                        </div>
+                        <div class="video-info">
+                            <h4>Jake's Journey to Professional Baseball</h4>
+                            <p>17-year-old Jake Martinez raised $25K for elite baseball training through ShootingStars. Today, he's playing in the minor leagues.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
+    <!-- Trust Signals Section -->
+    <section id="trust" class="py-5 bg-light">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="section-title">Trusted by Champions</h2>
+                <p class="section-subtitle">Join thousands of athletes and investors who trust ShootingStars</p>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="trust-logo">
+                        <div class="logo-placeholder">Elite Academy</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="trust-logo">
+                        <div class="logo-placeholder">Champions Club</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="trust-logo">
+                        <div class="logo-placeholder">Victory Sports</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="trust-logo">
+                        <div class="logo-placeholder">Future Stars</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 mb-4">
+                    <h5><i class="fas fa-star text-warning me-2"></i>ShootingStars</h5>
+                    <p>Connecting young athletes with investors who believe in their potential.</p>
+                </div>
+                <div class="col-lg-2 mb-4">
+                    <h6>Platform</h6>
+                    <ul class="footer-links">
+                        <li><a href="#how-it-works">How It Works</a></li>
+                        <li><a href="#success-stories">Success Stories</a></li>
+                        <li><a href="#trust">Trust & Safety</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 mb-4">
+                    <h6>Support</h6>
+                    <ul class="footer-links">
+                        <li><a href="#support">Help Center</a></li>
+                        <li><a href="#support">Contact Us</a></li>
+                        <li><a href="#support">Community</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 mb-4">
+                    <h6>Legal</h6>
+                    <ul class="footer-links">
+                        <li><a href="terms.html">Terms of Service</a></li>
+                        <li><a href="privacy.html">Privacy Policy</a></li>
+                        <li><a href="compliance.html">Compliance</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 mb-4">
+                    <h6>Connect</h6>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="my-4">
+            <div class="text-center">
+                <p>&copy; 2025 ShootingStars. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="database.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
