--- a/investor-signup.html
+++ b/investor-signup.html
@@ -5,51 +5,194 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investor Signup - ShootingStars</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="bg-light">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">
+                <i class="fas fa-star text-warning me-2"></i>ShootingStars
+            </a>
+            <a href="index.html" class="btn btn-outline-primary">
+                <i class="fas fa-arrow-left me-2"></i>Back to Home
+            </a>
+        </div>
+    </nav>
+
     <div class="container py-5">
-        <h1 class="text-center mb-4">Investor Signup</h1>
-        <form id="investorForm" class="col-md-6 mx-auto">
-            <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" required>
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="form-container">
+                    <div class="form-header">
+                        <h2><i class="fas fa-chart-line text-primary me-2"></i>Join as Investor</h2>
+                        <p>Discover and invest in the next generation of sports champions</p>
+                    </div>
+
+                    <form id="investorForm" class="needs-validation" novalidate>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="firstName" class="form-label">First Name</label>
+                                    <input type="text" class="form-control" id="firstName" required>
+                                    <div class="invalid-feedback">Please provide your first name.</div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="lastName" class="form-label">Last Name</label>
+                                    <input type="text" class="form-control" id="lastName" required>
+                                    <div class="invalid-feedback">Please provide your last name.</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email" class="form-label">Email Address</label>
+                            <input type="email" class="form-control" id="email" required>
+                            <div class="invalid-feedback">Please provide a valid email address.</div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="password" minlength="8" required>
+                            <div class="invalid-feedback">Password must be at least 8 characters long.</div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="confirmPassword" class="form-label">Confirm Password</label>
+                            <input type="password" class="form-control" id="confirmPassword" required>
+                            <div class="invalid-feedback">Passwords do not match.</div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="company" class="form-label">Company/Organization</label>
+                            <input type="text" class="form-control" id="company" required>
+                            <div class="invalid-feedback">Please provide your company name.</div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="investorType" class="form-label">Investor Type</label>
+                            <select class="form-select" id="investorType" required>
+                                <option value="">Select investor type</option>
+                                <option value="vc">Venture Capital</option>
+                                <option value="angel">Angel Investor</option>
+                                <option value="family_office">Family Office</option>
+                                <option value="private_equity">Private Equity</option>
+                                <option value="individual">Individual Investor</option>
+                                <option value="sports_agency">Sports Agency</option>
+                            </select>
+                            <div class="invalid-feedback">Please select your investor type.</div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="accreditation" class="form-label">Accreditation Status</label>
+                            <select class="form-select" id="accreditation" required>
+                                <option value="">Select accreditation status</option>
+                                <option value="accredited">Accredited Investor</option>
+                                <option value="qualified">Qualified Institutional Buyer</option>
+                                <option value="not_accredited">Not Accredited</option>
+                            </select>
+                            <div class="invalid-feedback">Please select your accreditation status.</div>
+                            <div class="form-text">Accredited investors have access to more investment opportunities</div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="minInvestment" class="form-label">Minimum Investment ($)</label>
+                                    <input type="number" class="form-control" id="minInvestment" min="1000" placeholder="10000">
+                                    <div class="form-text">Minimum amount per investment</div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="maxInvestment" class="form-label">Maximum Investment ($)</label>
+                                    <input type="number" class="form-control" id="maxInvestment" min="1000" placeholder="100000">
+                                    <div class="form-text">Maximum amount per investment</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="sportFocus" class="form-label">Sports Focus</label>
+                            <select class="form-select" id="sportFocus" multiple>
+                                <option value="football">Football</option>
+                                <option value="baseball">Baseball</option>
+                                <option value="martial_arts">Martial Arts</option>
+                                <option value="basketball">Basketball</option>
+                                <option value="soccer">Soccer</option>
+                                <option value="tennis">Tennis</option>
+                                <option value="all">All Sports</option>
+                            </select>
+                            <div class="form-text">Hold Ctrl/Cmd to select multiple sports</div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="investmentCriteria" class="form-label">Investment Criteria</label>
+                            <textarea class="form-control" id="investmentCriteria" rows="3" placeholder="e.g., Looking for football players aged 16-18 with social media following..."></textarea>
+                            <div class="form-text">Describe what you look for in potential investments</div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="experience" class="form-label">Investment Experience</label>
+                            <textarea class="form-control" id="experience" rows="3" placeholder="Previous investments, sports industry experience, etc."></textarea>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="linkedIn" class="form-label">LinkedIn Profile</label>
+                            <input type="url" class="form-control" id="linkedIn" placeholder="https://linkedin.com/in/yourprofile">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="kyc" class="form-label">Identity Verification</label>
+                            <input type="file" class="form-control" id="kyc" accept=".jpg,.jpeg,.png,.pdf">
+                            <div class="form-text">Upload a photo of your ID or passport for verification</div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="proofOfFunds" class="form-label">Proof of Funds (Optional)</label>
+                            <input type="file" class="form-control" id="proofOfFunds" accept=".jpg,.jpeg,.png,.pdf">
+                            <div class="form-text">Bank statement or investment account statement</div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="agreeTerms" required>
+                                <label class="form-check-label" for="agreeTerms">
+                                    I agree to the <a href="terms.html" class="text-primary">Terms of Service</a> and <a href="privacy.html" class="text-primary">Privacy Policy</a>
+                                </label>
+                                <div class="invalid-feedback">You must agree to the terms and conditions.</div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="agreeRisk" required>
+                                <label class="form-check-label" for="agreeRisk">
+                                    I understand that investments carry risk and may result in loss of capital
+                                </label>
+                                <div class="invalid-feedback">You must acknowledge the investment risks.</div>
+                            </div>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary w-100 py-3">
+                            <i class="fas fa-chart-line me-2"></i>Create My Investor Profile
+                        </button>
+                    </form>
+
+                    <div class="text-center mt-4">
+                        <p class="text-muted">Already have an account? <a href="login.html" class="text-primary">Sign in here</a></p>
+                    </div>
+                </div>
             </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" required>
-            </div>
-            <div class="mb-3">
-                <label for="investorType" class="form-label">Investor Type</label>
-                <select class="form-select" id="investorType" required>
-                    <option value="vc">Venture Capital</option>
-                    <option value="angel">Angel Investor</option>
-                    <option value="family_office">Family Office</option>
-                </select>
-            </div>
-            <div class="mb-3">
-                <label for="accreditation" class="form-label">Accreditation Status</label>
-                <select class="form-select" id="accreditation" required>
-                    <option value="yes">Accredited</option>
-                    <option value="no">Not Accredited</option>
-                </select>
-            </div>
-            <div class="mb-3">
-                <label for="investmentFocus" class="form-label">Investment Focus</label>
-                <input type="text" class="form-control" id="investmentFocus" placeholder="E.g., Football, $10K-$50K">
-            </div>
-            <div class="mb-3">
-                <label for="kyc" class="form-label">AML/KYC Verification (Upload ID)</label>
-                <input type="file" class="form-control" id="kyc">
-            </div>
-            <button type="submit" class="btn btn-primary">Sign Up</button>
-        </form>
+        </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="database.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
