--- a/investor-dashboard.html
+++ b/investor-dashboard.html
@@ -18,17 +18,16 @@
             </a>
             <div class="navbar-nav ms-auto">
                 <a href="index.html" class="nav-link">Home</a>
-                <a href="#" class="nav-link">My Investments</a>
-                <a href="#" class="nav-link">Messages</a>
+                <a href="my-investments.html" class="nav-link">My Investments</a>
+                <a href="messages.html" class="nav-link">Messages</a>
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                        <i class="fas fa-user-circle"></i> Profile
+                        <i class="fas fa-user-circle"></i> <span id="navUserName">Profile</span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Edit Profile</a></li>
-                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <li><a class="dropdown-item" href="settings.html">Settings</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="logout()">Logout</a></li>
                     </ul>
                 </div>
             </div>
@@ -38,8 +37,8 @@
     <div class="container py-5">
         <!-- Dashboard Header -->
         <div class="dashboard-header text-center mb-4">
-            <h1 class="display-5 fw-bold">Investor Dashboard</h1>
-            <p class="lead">Discover and invest in the next generation of sports champions</p>
+            <h1 class="display-5 fw-bold">Discover Rising Stars</h1>
+            <p class="lead">Invest in the next generation of sports champions</p>
         </div>
 
         <!-- Quick Stats -->
@@ -49,8 +48,8 @@
                     <div class="stat-icon mb-3">
                         <i class="fas fa-users text-primary"></i>
                     </div>
-                    <h3 class="mb-1">247</h3>
-                    <p class="text-muted">Available Athletes</p>
+                    <h3 class="mb-1" id="totalAthletes">5</h3>
+                    <p class="text-muted">Elite Athletes Available</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-3">
@@ -59,7 +58,7 @@
                         <i class="fas fa-chart-line text-success"></i>
                     </div>
                     <h3 class="mb-1">$2.4M</h3>
-                    <p class="text-muted">Total Invested</p>
+                    <p class="text-muted">Platform Investments</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-3">
@@ -67,7 +66,7 @@
                     <div class="stat-icon mb-3">
                         <i class="fas fa-trophy text-warning"></i>
                     </div>
-                    <h3 class="mb-1">95%</h3>
+                    <h3 class="mb-1">85%</h3>
                     <p class="text-muted">Success Rate</p>
                 </div>
             </div>
@@ -76,7 +75,7 @@
                     <div class="stat-icon mb-3">
                         <i class="fas fa-dollar-sign text-info"></i>
                     </div>
-                    <h3 class="mb-1">$45K</h3>
+                    <h3 class="mb-1">$55K</h3>
                     <p class="text-muted">Avg. Investment</p>
                 </div>
             </div>
@@ -96,10 +95,11 @@
                     <label class="form-label">Sport</label>
                     <select class="form-select" id="sportFilter">
                         <option value="">All Sports</option>
-                        <option value="football">Football</option>
+                        <option value="soccer">Soccer</option>
+                        <option value="basketball">Basketball</option>
                         <option value="baseball">Baseball</option>
                         <option value="martial_arts">Martial Arts</option>
-                        <option value="basketball">Basketball</option>
+                        <option value="football">Football</option>
                     </select>
                 </div>
                 <div class="col-lg-2 mb-3">
@@ -115,10 +115,10 @@
                     <label class="form-label">Funding Goal</label>
                     <select class="form-select" id="fundingFilter">
                         <option value="">All Amounts</option>
-                        <option value="0-10000">$0 - $10K</option>
-                        <option value="10000-25000">$10K - $25K</option>
+                        <option value="0-25000">$0 - $25K</option>
                         <option value="25000-50000">$25K - $50K</option>
-                        <option value="50000+">$50K+</option>
+                        <option value="50000-75000">$50K - $75K</option>
+                        <option value="75000+">$75K+</option>
                     </select>
                 </div>
             </div>
@@ -126,7 +126,7 @@
 
         <!-- Featured Athletes -->
         <div class="mb-4">
-            <h3 class="mb-3"><i class="fas fa-star text-warning me-2"></i>Featured Athletes</h3>
+            <h3 class="mb-3"><i class="fas fa-star text-warning me-2"></i>Rising Champions</h3>
             <div class="row" id="athletesList">
                 <!-- Athletes will be loaded here -->
             </div>
@@ -135,7 +135,7 @@
         <!-- Load More Button -->
         <div class="text-center">
             <button class="btn btn-outline-primary btn-lg" id="loadMoreBtn">
-                <i class="fas fa-plus me-2"></i>Load More Athletes
+                <i class="fas fa-plus me-2"></i>View All Athletes
             </button>
         </div>
     </div>
@@ -153,10 +153,10 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">
+                    <button type="button" class="btn btn-primary" onclick="contactAthleteFromModal()">
                         <i class="fas fa-envelope me-2"></i>Contact Athlete
                     </button>
-                    <button type="button" class="btn btn-success">
+                    <button type="button" class="btn btn-success" onclick="investInAthleteFromModal()">
                         <i class="fas fa-dollar-sign me-2"></i>Invest Now
                     </button>
                 </div>
@@ -165,6 +165,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="database.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
